<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Health Care</string>
    <string name="Login">Login</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_pass">Enter Your Password</string>
    <string name="wl_back">Welcome Back!</string>
    <string name="signup_description">Already have an account? Login Now</string>
    <string name="login_description">Create an account? Register</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="enter_phone">Enter Your Phone Number</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="doctor">Doctor</string>
    <string name="user">User</string>
    <string name="doctor_data">Doctors Data</string>
    <string name="specification">Specification</string>
    <string name="name">Name</string>
    <string name="affiliated_hospital">Affiliated Hospital</string>
    <string name="office_hours">Office Hours</string>
    <string name="Booked">Booked</string>
    <string name="update_txt">We update your data on the behalf of your email</string>
</resources>