<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:padding="3dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:backgroundTint="@color/gray">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_spec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/specification"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_spec"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/affiliated_hospital"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_timmmings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_hospital"
                android:layout_marginStart="15sp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/office_hours"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_remove"
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@drawable/btn_bg"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="Remove"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>